--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Quiz App</title>
+    <title>Quiz App</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -18,8 +18,7 @@
             <button type="submit">Submit</button>
         </form>
         <div id="result"></div>
-        <h2>All Participants' Scores</h2>
-        <div id="allScores"></div>
+        <a href="scores.html" class="view-scores">Dashboard</a>
     </div>
 
     <script src="app.js"></script>
