--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz App</title>
+    <title>DEL QUIZ</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="quiz-container">
-        <h1>Quiz App</h1>
+        <img src="./img/quiz.png" alt="Quiz Image" class="quiz-image">
+        <!-- <h1>DEL Quiz</h1> -->
         <form id="quizForm">
             <label for="name">Enter your name:</label>
             <input type="text" id="name" required><br><br>
@@ -18,7 +19,7 @@
             <button type="submit">Submit</button>
         </form>
         <div id="result"></div>
-        <a href="scores.html" class="view-scores">Dashboard</a>
+        <!-- <a href="scores.html" class="view-scores">Dashboard</a> -->
     </div>
 
     <script src="app.js"></script>
