--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
             <button type="submit">Submit</button>
         </form>
         <div id="result"></div>
-        <!-- <a href="scores.html" class="view-scores">Dashboard</a> -->
+        <a href="scores.html" class="view-scores">Dashboard</a>
     </div>
 
     <script src="app.js"></script>
